--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "new-server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "new-server.js"
+    "start" : "node new-server.js"
   },
   "repository": {
     "type": "git",
